Z-index fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,7 @@ nav {
 
   background-color: #181818;
   color: #fafafa;
+  z-index: 100;
 }
 
 nav.fixed {
